# la_maml_clinical_v2

./: .env.example  .gitignore  CRITICAL_BUGS_FIXED.md  PEFT_INTEGRATION_SUMMARY.md  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: cmaml_seq_2013_2024.yaml  cmaml_seq_2019_2024.yaml  lamaml_seq_2019_2024.yaml  tmaml_seq_2013_2024.yaml  tmaml_seq_2019_2024.yaml  traditional_nonseq_2013_2018.yaml  traditional_nonseq_2013_2024.yaml  traditional_seq_2013_2024.yaml  traditional_seq_2019_2024.yaml
configs/models/: cmaml.yaml  cmaml_peft.yaml  lamaml.yaml  lamaml_peft.yaml  tmaml.yaml  tmaml_peft.yaml  traditional.yaml  traditional_peft.yaml
configs/paths/: gpfs.yaml  local.yaml
scripts/: run_experiment.py  test_tmaml_batches.py  test_tmaml_batches.sh
scripts/slurm/: submit.sh
src/lamaml_clinical/: __init__.py
src/lamaml_clinical/core/: __init__.py  config.py  paths.py
src/lamaml_clinical/data/: __init__.py  datamodules.py  datasets.py
src/lamaml_clinical/evaluation/: __init__.py  plotting.py
src/lamaml_clinical/models/: __init__.py  base.py  cmaml.py  lamaml.py  replay_buffer.py  tmaml.py  traditional.py
src/lamaml_clinical/training/: __init__.py  runner.py
src/lamaml_clinical/utils/: __init__.py  monitoring.py
tests/: conftest.py
tests/integration/: __init__.py  test_runner.py
tests/unit/: __init__.py  test_config.py  test_models.py
