[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamaml-clinical"
version = "0.2.0"
description = "LA-MAML for Continual Learning in Clinical NLP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Spencer Jacobs-Skolik", email = "spencer.jacobs-skolik@nyulangone.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "transformers>=4.30.0",
    "higher>=0.2.1",
    "torchmetrics>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "wandb>=0.15.0",
    "omegaconf>=2.3.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "peft>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
plotting = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
lamaml-run = "lamaml_clinical.training.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lamaml_clinical"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["lamaml_clinical"]
